# vcpu

./: .gitattributes  Cargo.nix  Cargo.toml  README.md  default.nix  shell.nix
.github/workflows/: rust.yml
src/: common.rs  lib.rs  main.rs
src/circuit/: gate.rs  wire.rs
src/component/: byte.rs  decoder.rs  enabler.rs  memory.rs  mod.rs  shifter.rs
src/component/memory/: bit.rs  byte.rs  mod.rs  register.rs
src/component/memory/ram/: cell.rs  mod.rs
src/io/: mod.rs
src/units/: bit.rs
tests/: circuit.rs  mod.rs
tests/circuit/: mod.rs
tests/component/: mod.rs
tests/component/memory/: mod.rs
tests/component/memory/ram/: mod.rs
