[package]
name = "vcpu"
version = "0.1.0"
authors = ["Mesabloo <22964017+Mesabloo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4"
pixels = "0.0.4"
# Those two dependencies are not yet used. They will come handy once we have some sort of screen to output data to.